# findso

./: .pylintrc  README.md  pyproject.toml  requirements.txt
src/findso/: __init__.py  _version.py  cli.py  core.py
tests/: conftest.py  test_core.py
