[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "findso"
version = "1.0.0"
description = "Find exported symbols in .so files"
authors = [
    {name = "faulty ptrrr"}
]
requires-python = ">=3.10"
dependencies = [
    "pyelftools==0.32",
    "colorama==0.4.6",
    "black==25.1.0",
]

[project.scripts]
findso = "findso.cli:main"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
''' 